--- a/index.css
+++ b/index.css
@@ -1,55 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-    border: 1px solid black;
-}
-.nav-items > ul{
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items>ul>li{
-    padding: 10px;
-}
-
-.logo{
-    width: 100px;
-}
-.card{
-    padding: 10px;
-    margin: 10px;
-    width: 200px;
-    border: 1px solid black;
-}
-
-.card >img {
-    width: 100%;
-}
-
-.restaurant-list{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-cards{
-    background-color: lightgray;
-    width: 200px;
-    height: 250px;
-    margin: 20px;
-}
-
-.restaurant-details{
-    display: flex;
-}
-
-.restaurant-details-shimmer{
-    display: flex;
-}
-
-.shimmer-cards-details{
-    background-color: lightgray;
-    width: 508px;
-    height: 450px;
-    margin: 20px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
